Kubernetes/canary-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-canary
  labels:
    app: flask-app
    version: canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
      version: canary
  template:
    metadata:
      labels:
        app: flask-app
        version: canary
    spec:
      containers:
      - name: flask-container
        image: riajul98/my-flask-app:canary
        ports:
        - containerPort: 5000
