Kubernetes/stable-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-stable
  labels:
    app: flask-app
    version: stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flask-app
      version: stable
  template:
    metadata:
      labels:
        app: flask-app
        version: stable
    spec:
      containers:
      - name: flask-container
        image: riajul98/my-flask-app:stable
        ports:
        - containerPort: 5000
